--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ dependencies {
     androidTestImplementation 'androidx.test:core:1.1.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
 
-
+    implementation 'com.jaredrummler:material-spinner:1.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
